--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -16,8 +16,8 @@
 
     <TextView
         android:id="@+id/create_announcement"
-        android:layout_width="382dp"
-        android:layout_height="127dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="50dp"
         android:text="@string/announcement"
@@ -33,103 +33,102 @@
         android:layout_height="148dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="43dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="498dp"
         android:background="@drawable/button_bg2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_announcement"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/create_announcement" />
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/ic_add_photo"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="74dp"
         android:src="@drawable/plusik"
         app:flow_horizontalAlign="center"
         app:layout_constraintStart_toStartOf="@id/imageButton"
-        tools:layout_editor_absoluteY="242dp" />
+        app:layout_constraintTop_toBottomOf="@id/create_announcement" />
 
     <TextView
-        android:layout_width="194dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="172dp"
-        android:layout_marginTop="252dp"
-        android:text="ADD \nPHOTO"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Photo"
         android:textColor="@color/black"
         android:textSize="35dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/nameofproduc"
-        android:layout_width="382dp"
-        android:layout_height="30dp"
+        android:layout_marginTop="82dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="416dp"
-        android:text="Name of your product*"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/ic_add_photo"
+        app:layout_constraintTop_toBottomOf="@id/create_announcement"/>
 
     <TextView
-        android:id="@+id/description2"
-        android:layout_width="382dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="636dp"
-        android:text="Description*"
+        android:id="@+id/product_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/name_of_your_product"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="64dp"
+        app:layout_constraintStart_toStartOf="@id/imageButton"
+        app:layout_constraintTop_toBottomOf="@id/imageButton"/>
 
     <EditText
-        android:id="@+id/nameofproduct"
+        android:id="@+id/et_product_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="32dp"
-        android:hint="Example, ID Card"
+        android:hint="@string/example_id_card"
         android:inputType="text"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="454dp" />
+        app:layout_constraintTop_toBottomOf="@id/product_name"
+        app:layout_constraintStart_toStartOf="@id/product_name"/>
 
     <TextView
         android:id="@+id/category"
-        android:layout_width="382dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="512dp"
-        android:text="Category*"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/category"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="@id/product_name"
+        app:layout_constraintTop_toBottomOf="@id/et_product_name"/>
 
     <EditText
-        android:id="@+id/categorypick"
+        android:id="@+id/et_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="32dp"
-        android:hint="Example, lost-and-found"
+        android:hint="@string/example_lost_and_found"
         android:inputType="text"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="551dp" />
+        app:layout_constraintStart_toStartOf="@id/product_name"
+        app:layout_constraintTop_toBottomOf="@id/category"
+        />
+
+    <TextView
+        android:id="@+id/description2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/description"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/category"
+        app:layout_constraintStart_toStartOf="@id/product_name"
+        android:layout_marginTop="128dp"/>
+
+    <EditText
+        android:id="@+id/description1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/description_of_your_product"
+        android:inputType="text"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/description2"
+        app:layout_constraintStart_toStartOf="@id/description2"/>
 
     <View
         android:layout_width="match_parent"
@@ -137,30 +136,17 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:background="#7b7b7b"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="609dp" />
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/et_category"
+        />
 
-    <EditText
-        android:id="@+id/description1"
-        android:layout_width="355dp"
-        android:layout_height="139dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="32dp"
-        android:hint="Description of your product"
-        android:inputType="text"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="682dp" />
 
     <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container"
-        />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
