--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ScrollView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="409dp"
+        android:layout_height="729dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="37dp"
@@ -116,9 +126,9 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/category"
+        app:layout_constraintTop_toBottomOf="@id/et_category"
         app:layout_constraintStart_toStartOf="@id/product_name"
-        android:layout_marginTop="128dp"/>
+        android:layout_marginTop="32dp"/>
 
     <EditText
         android:id="@+id/description1"
@@ -130,15 +140,8 @@
         app:layout_constraintTop_toBottomOf="@id/description2"
         app:layout_constraintStart_toStartOf="@id/description2"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:background="#7b7b7b"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/et_category"
-        />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 
     <FrameLayout
