--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -180,6 +180,7 @@
 
         <TextView
             android:id="@+id/item_name"
+            android:onClick="More_details"
             android:layout_width="189dp"
             android:layout_height="100dp"
             android:layout_marginHorizontal="16dp"
