--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -16,14 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="37dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/crest"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/create_announcement"
         android:layout_width="wrap_content"
@@ -39,9 +31,9 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="375dp"
-        android:layout_height="148dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="340dp"
+        android:layout_height="130dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="43dp"
         android:background="@drawable/button_bg2"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,13 +77,13 @@
         android:id="@+id/et_product_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
         android:hint="@string/example_id_card"
         android:inputType="text"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/product_name"
-        app:layout_constraintStart_toStartOf="@id/product_name"/>
+        app:layout_constraintStart_toStartOf="@id/imageButton"
+        app:layout_constraintTop_toBottomOf="@id/product_name"/>
 
     <TextView
         android:id="@+id/category"
@@ -109,7 +101,7 @@
         android:id="@+id/et_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="32dp"
         android:hint="@string/example_lost_and_found"
         android:inputType="text"
@@ -132,13 +124,15 @@
 
     <EditText
         android:id="@+id/description1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="32dp"
         android:hint="@string/description_of_your_product"
         android:inputType="text"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/description2"
-        app:layout_constraintStart_toStartOf="@id/description2"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/description2"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
