--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="729dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -138,69 +139,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/container1"
-            android:layout_width="200dp"
-            android:layout_height="409dp"
-            android:layout_marginTop="32dp"
-            android:background="@color/whhhw"
-            android:radius="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/services" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/services"
+                android:layout_marginTop="24dp"
+                android:elevation="1dp">
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragmentContainerView"
-            android:layout_width="200dp"
-            android:layout_height="413dp"
-            android:layout_marginStart="8dp"
-            android:background="@color/whhhw"
-            android:radius="20dp"
-            app:layout_constraintStart_toEndOf="@id/container1"
-            app:layout_constraintTop_toBottomOf="@id/other"
-            android:layout_marginTop="88dp"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
 
-        <ImageView
-            android:id="@+id/item_photo"
-            android:layout_width="190dp"
-            android:layout_height="204dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="44dp"
-            android:src="@drawable/example_item_photo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/services"
-            android:contentDescription="@string/todo" />
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/today_11_23"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/item_photo"
-        app:layout_constraintStart_toStartOf="@id/item_name"/>
 
-        <TextView
-            android:id="@+id/item_name"
-            android:onClick="More_details"
-            android:layout_width="189dp"
-            android:layout_height="100dp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="32dp"
-            android:text="@string/_3"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/item_photo" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/_19_500_000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/item_name"
-            app:layout_constraintTop_toBottomOf="@id/item_name" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
