--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,19 +69,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buy_and_sale"
-            android:layout_width="180dp"
-            android:layout_height="61dp"
-            android:background="@drawable/button_bg"
-            android:text="@string/buy_sale"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@id/accomodation"
-            android:layout_marginStart="20dp"
-            app:layout_constraintTop_toBottomOf="@id/ImageLogo"
-            android:layout_marginTop="32dp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buy_and_sale"
+                android:layout_width="180dp"
+                android:layout_height="61dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/button_bg"
+                android:text="@string/buy_sale"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/accomodation"
+                app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/lost_and_found"
@@ -97,33 +98,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/accomodation" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/project"
-            android:layout_width="180dp"
-            android:layout_height="61dp"
-            android:background="@drawable/button_bg"
-            android:text="@string/project"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/buy_and_sale"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@id/lost_and_found"
-            android:layout_marginStart="20dp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/project"
+                android:layout_width="180dp"
+                android:layout_height="61dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/button_bg"
+                android:text="@string/project"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/lost_and_found"
+                app:layout_constraintTop_toBottomOf="@id/buy_and_sale" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/other"
-            android:layout_width="180dp"
-            android:layout_height="61dp"
-            android:background="@drawable/button_bg"
-            android:text="@string/other"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/project"
-            app:layout_constraintStart_toEndOf="@id/services"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="8dp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/other"
+                android:layout_width="180dp"
+                android:layout_height="61dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/button_bg"
+                android:text="@string/other"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/services"
+                app:layout_constraintTop_toBottomOf="@id/project" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/services"
@@ -140,7 +143,7 @@
             app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/services"
@@ -149,7 +152,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
