--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,26 +21,28 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/today_11_23"
+            android:textSize="16sp"
             android:layout_marginVertical="16dp"
             app:layout_constraintTop_toBottomOf="@id/item_photo"
             app:layout_constraintStart_toStartOf="@id/item_name"/>
 
         <TextView
             android:id="@+id/item_name"
-            android:onClick="More_details"
-            android:layout_width="189dp"
-            android:layout_height="100dp"
+            android:layout_width="292dp"
+            android:layout_height="54dp"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
+            android:onClick="More_details"
             android:text="@string/_3"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/item_photo" />
+            app:layout_constraintStart_toStartOf="@id/date"
+            app:layout_constraintTop_toBottomOf="@id/date" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -48,6 +50,7 @@
             android:layout_marginTop="10dp"
             android:text="@string/_19_500_000"
             android:textSize="16sp"
+            android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/item_name"
             app:layout_constraintTop_toBottomOf="@id/item_name" />
