--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,6 +25,8 @@
 
 
         <ImageView
+            android:id="@+id/user_photo"
+            android:onClick="change_photo"
             android:layout_width="wrap_content"
             android:layout_height="125dp"
             android:layout_marginTop="100dp"
