--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -35,9 +35,9 @@
 
             <ImageButton
                 android:id="@+id/imageButton"
-                android:layout_width="375dp"
+                android:layout_width="match_parent"
                 android:layout_height="148dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="43dp"
                 android:background="@drawable/button_bg2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,13 +81,12 @@
                 android:id="@+id/et_product_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginHorizontal="16dp"
                 android:hint="@string/example_id_card"
                 android:inputType="text"
                 android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@id/product_name"
-                app:layout_constraintStart_toStartOf="@id/product_name"/>
+                app:layout_constraintStart_toStartOf="@id/imageButton"/>
 
             <TextView
                 android:id="@+id/category"
@@ -105,23 +104,12 @@
                 android:id="@+id/et_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginHorizontal="16dp"
                 android:hint="@string/example_lost_and_found"
                 android:inputType="text"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@id/product_name"
                 app:layout_constraintTop_toBottomOf="@id/category"
-                />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:background="#7b7b7b"
-                android:layout_marginTop="50dp"
-                app:layout_constraintTop_toBottomOf="@id/et_category"
                 />
 
             <TextView
@@ -132,18 +120,18 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/category"
+                app:layout_constraintTop_toBottomOf="@id/et_category"
                 app:layout_constraintStart_toStartOf="@id/product_name"
-                android:layout_marginTop="128dp"/>
+                android:layout_marginTop="24dp"/>
 
             <EditText
                 android:id="@+id/description1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
                 android:hint="@string/description_of_your_product"
                 android:inputType="text"
                 android:textSize="20sp"
-                android:layout_marginBottom="100dp"
                 app:layout_constraintTop_toBottomOf="@id/description2"
                 app:layout_constraintStart_toStartOf="@id/description2"
                 app:layout_constraintBottom_toBottomOf="parent"/>
