--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -33,6 +33,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="43dp"
                 android:background="@drawable/button_bg2"
+                android:onClick="change_photo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/create_announcement" />
 
