--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -18,20 +18,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/announcement"
                 android:textColor="@color/black"
-                android:textSize="40dp"
-                android:textStyle="bold"
+                android:textSize="38dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/imageButton"
                 android:layout_width="match_parent"
-                android:layout_height="148dp"
+                android:layout_height="100dp"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="43dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/button_bg2"
                 android:onClick="change_photo"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,10 +38,10 @@
 
             <ImageView
                 android:id="@+id/ic_add_photo"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="74dp"
+                android:layout_marginTop="44dp"
                 android:src="@drawable/plusik"
                 app:flow_horizontalAlign="center"
                 app:layout_constraintStart_toStartOf="@id/imageButton"
@@ -52,10 +51,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add Photo"
-                android:textColor="@color/black"
-                android:textSize="35dp"
-                android:layout_marginTop="82dp"
-                android:layout_marginStart="16dp"
+                android:textColor="#252c2f"
+                android:textSize="24sp"
+                android:layout_marginTop="48dp"
+                android:layout_marginStart="18dp"
                 app:layout_constraintStart_toEndOf="@id/ic_add_photo"
                 app:layout_constraintTop_toBottomOf="@id/create_announcement"/>
 
@@ -65,9 +64,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/name_of_your_product"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="24dp"
                 app:layout_constraintStart_toStartOf="@id/imageButton"
                 app:layout_constraintTop_toBottomOf="@id/imageButton"/>
 
@@ -78,7 +77,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:hint="@string/example_id_card"
                 android:inputType="text"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 app:layout_constraintTop_toBottomOf="@id/product_name"
                 app:layout_constraintStart_toStartOf="@id/imageButton"/>
 
@@ -88,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/category"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginTop="24dp"
                 app:layout_constraintStart_toStartOf="@id/product_name"
@@ -101,7 +100,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:hint="@string/example_lost_and_found"
                 android:inputType="text"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/product_name"
                 app:layout_constraintTop_toBottomOf="@id/category"
                 />
@@ -112,23 +111,36 @@
                 android:layout_height="wrap_content"
                 android:text="@string/description"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/et_category"
                 app:layout_constraintStart_toStartOf="@id/product_name"
                 android:layout_marginTop="24dp"/>
 
             <EditText
-                android:id="@+id/description1"
+                android:id="@+id/et_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:hint="@string/description_of_your_product"
                 android:inputType="text"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 app:layout_constraintTop_toBottomOf="@id/description2"
-                app:layout_constraintStart_toStartOf="@id/description2"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintStart_toStartOf="@id/description2"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/button_bg2"
+                android:text="Create"
+                android:textAllCaps="false"
+                android:textColor="#252c2f"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@id/imageButton"
+                app:layout_constraintTop_toBottomOf="@id/et_description" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
